Update author name and publication descriptions
Updated the title and meta description to reflect the author's name change. Modified the introductory paragraph to clarify the types of publications listed.

--- a/publications.html
+++ b/publications.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Publications • Your Name</title>
-  <meta name="description" content="Publications by Your Name" />
+  <title>Publications • Anson Zhou</title>
+  <meta name="description" content="Publications by Anson Zhou" />
   <style>
     :root{
       --bg:#ffffff; --fg:#0f172a; --muted:#475569; --card:#f8fafc; --border:#e2e8f0; --accent:#0ea5e9; --tag-bg:#e2f2ff;
@@ -45,7 +45,7 @@
   <main class="wrap">
     <header>
       <h1>Publications</h1>
-      <p>Selected peer-reviewed papers, preprints, abstracts, and patents.</p>
+      <p>Selected journal articles, preprints, abstracts, and patents.</p>
       <div class="toolbar">
         <div class="search"><input id="q" type="search" placeholder="Search title, authors, venue…" aria-label="Search publications"></div>
         <button id="clear" class="clear-btn" type="button">Clear filters</button>
@@ -84,6 +84,270 @@
        }
     */
   ]
+   [
+  {
+    "title": "Artificial Intelligence in Dermatology Research and Drug Discovery",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:8k81kl-MbHgC",
+    "authors": [
+      "V Utti",
+      "T Bikias",
+      "AA Agarwal",
+      "V Bikia",
+      "AY Zhou",
+      "MM Shah",
+      "R Daneshjou"
+    ],
+    "venue": "Dermatologic Clinics",
+    "year": 2025,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "SycEval: Evaluating LLM Sycophancy",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:5nxA0vEk-isC",
+    "authors": [
+      "A Fanous",
+      "J Goldberg",
+      "AA Agarwal",
+      "J Lin",
+      "A Zhou",
+      "R Daneshjou",
+      "S Koyejo"
+    ],
+    "venue": "arXiv preprint arXiv:2502.08177",
+    "year": 2025,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "A do it yourself (DIY) point-of-care wrist ultrasound phantom for joint access training",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:hqOjcs7Dif8C",
+    "authors": [
+      "CM Andrea Cheng",
+      "Justin Zhou",
+      "Chun Hei Ryan Chan",
+      "Connie Chen",
+      "Charlotte ..."
+    ],
+    "venue": "The Ultrasound Journal 16 (32)",
+    "year": 2024,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Design and Evaluation of a Spoke-Based Double-Lumen Pediatric Gastrostomy Tube",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:Se3iqnhoufwC",
+    "authors": [
+      "M Aedla",
+      "CJ Cheng",
+      "AY Zhou",
+      "S Zhang",
+      "J Hsu",
+      "K Hu",
+      "JC Qian",
+      "KV Sompel",
+      "..."
+    ],
+    "venue": "Children 11 (2), 263",
+    "year": 2024,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Nanofiber nerve caps to inhibit neuroma formation",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:0EnyYjriUFMC",
+    "authors": [
+      "HQ Mao",
+      "S TUFFAHA",
+      "A Hoke",
+      "A Y. ZHOU",
+      "BP ENZMANN",
+      "M James LAN",
+      "..."
+    ],
+    "venue": "WO Patent 178191A2, 2024",
+    "year": 2024,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Retractable low-profile pediatric gastrostomy tube and uses thereof",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:LkGwnXOMwfcC",
+    "authors": [
+      "M AEDLA",
+      "K Sharma",
+      "S ZHANG",
+      "J Qian",
+      "C CHENG",
+      "J HSU",
+      "A ZHOU",
+      "..."
+    ],
+    "venue": "WO Patent 0238164A1, 2024",
+    "year": 2024,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "SAEM24 A novel ultrasound-guided wrist arthrocentesis task trainer for procedural teaching and assessment",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:UebtZRa9Y70C",
+    "authors": [
+      "TF Won-Jun Kuk",
+      "Justin Zhou",
+      "Chun Hei Chan",
+      "Kaitlyn Storm",
+      "Charlotte Cheng ..."
+    ],
+    "venue": "ACADEMIC EMERGENCY MEDICINE",
+    "year": 2024,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Biodegradable nanofiber conical conduits for nerve repair",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:roLk4NBRz8UC",
+    "authors": [
+      "HQ Mao",
+      "S Tuffaha",
+      "A Hoke",
+      "MJ Lan",
+      "BP Enzmann",
+      "AY Zhou",
+      "AL Wong",
+      "..."
+    ],
+    "venue": "US Patent 0389926A1, 2023",
+    "year": 2023,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "A Study of Postoperative Complications Occurring at Home with Pediatric Gastrostomy Feeding Tubes",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:YsMSGLbcyi4C",
+    "authors": [
+      "M Aedla",
+      "A Zhou",
+      "K Sompel",
+      "K Hu",
+      "C Cheng",
+      "J Hsu",
+      "J Qian",
+      "S Zhang",
+      "A Ho",
+      "..."
+    ],
+    "venue": "Journal of Pediatric Gastroenterology and Nutrition 75, 10.1097",
+    "year": 2022,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "METABOLITES IMPORTANT IN THE DIFFERENTIATION OF HUMAN PLURIPOTENT STEM CELLS TO LUNG PROGENITOR CELLS",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:Tyk-4Ss8FVUC",
+    "authors": [
+      "SL Leibel",
+      "I Tseu",
+      "A Zhou",
+      "A Hodges",
+      "J Yin",
+      "C Bilodeau",
+      "O Goltsis",
+      "M Post"
+    ],
+    "venue": "JOURNAL OF INVESTIGATIVE MEDICINE 70 (1), 173-173",
+    "year": 2022,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Metabolomic profiling of human pluripotent stem cell differentiation into lung progenitors",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:zYLM7Y9cAGgC",
+    "authors": [
+      "SL Leibel",
+      "I Tseu",
+      "A Zhou",
+      "A Hodges",
+      "J Yin",
+      "C Bilodeau",
+      "O Goltsis",
+      "M Post"
+    ],
+    "venue": "Iscience 25 (2)",
+    "year": 2022,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "P18. A NOVEL BIOENGINEERED CONDUIT REDUCES NEUROMA FORMATION AFTER TARGETED MUSCLE REINNERVATION",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:W7OEmFMy1HYC",
+    "authors": [
+      "E Lee",
+      "B Enzmann",
+      "T Harris",
+      "A Wong",
+      "S Pinni",
+      "N von Guionneau",
+      "..."
+    ],
+    "venue": "Plastic and Reconstructive Surgery–Global Open 10 (4S), 57-58",
+    "year": 2022,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "QS51. Guiding the Way: The Use of a Bioengineered Conduit Reduces Neuroma Formation and Associated Pain Behaviors",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:eQOLeE2rZwMC",
+    "authors": [
+      "E Lee",
+      "B Enzmann",
+      "T Harris",
+      "A Wong",
+      "S Pinni",
+      "N von Guionneau",
+      "..."
+    ],
+    "venue": "Plastic and Reconstructive Surgery–Global Open 10 (6S), 121",
+    "year": 2022,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "Improving nerve coaptation outcomes in targeted muscle reinnervation: a novel bioengineered device",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:qjMakFHDy7sC",
+    "authors": [
+      "E Lee",
+      "AL Wong",
+      "S Pinni",
+      "N Von Guionneau",
+      "TGW Harris",
+      "R Kothari",
+      "..."
+    ],
+    "venue": "Plastic and Reconstructive Surgery–Global Open 9 (10S), 99-100",
+    "year": 2021,
+    "abstract": "",
+    "tags": []
+  },
+  {
+    "title": "S1288 Varying and Prevalent Complications Associated With Pediatric Gastrostomy Tubes",
+    "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:2osOgNQ5qMEC",
+    "authors": [
+      "M Aedla",
+      "A Zhou",
+      "K Sompel",
+      "K Hu",
+      "S Zhang",
+      "J Qian",
+      "C Cheng",
+      "J Hsu",
+      "..."
+    ],
+    "venue": "Official journal of the American College of Gastroenterology | ACG 116, S592",
+    "year": 2021,
+    "abstract": "",
+    "tags": []
+  }
+]
   </script>
 
   <!-- ======= Renderer / Logic ======= -->
