--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <a href="/">Home</a>
         <a href="/experiences.html">Experience</a>
         <a href="/research.html">Research</a>
-        <a href="/research.html">Publications</a>        
+        <a href="/publications.html">Publications</a>        
         <a href="/media.html">Media</a>
         
       </nav>
