Refactor publication JSON and author lists
Updated the publication data structure and improved author formatting.

--- a/publications.html
+++ b/publications.html
@@ -66,37 +66,12 @@
     <div id="pubs" class="grid" aria-live="polite"></div>
   </main>
 
-  <!-- ======= Paste your Scholar JSON array below ======= -->
   <script type="application/json" id="pubdata">
-  [
-    /* Replace this array with the JSON printed by your console snippet.
-       You can then add/override "type": "journal|conference|preprint|workshop|patent|abstract"
-       and "tags": ["foo","bar"] per item. Example minimal item:
-       {
-         "title": "Example Paper",
-         "url": "https://example.com",
-         "authors": ["Last, F.", "Coauthor, A."],
-         "venue": "Journal of Great Results",
-         "year": 2025,
-         "type": "journal",
-         "tags": ["sleep","RWE"],
-         "abstract": "Optional one-liner."
-       }
-    */
-  ]
-   [
+[
   {
     "title": "Artificial Intelligence in Dermatology Research and Drug Discovery",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:8k81kl-MbHgC",
-    "authors": [
-      "V Utti",
-      "T Bikias",
-      "AA Agarwal",
-      "V Bikia",
-      "AY Zhou",
-      "MM Shah",
-      "R Daneshjou"
-    ],
+    "authors": ["V Utti", "T Bikias", "AA Agarwal", "V Bikia", "AY Zhou", "MM Shah", "R Daneshjou"],
     "venue": "Dermatologic Clinics",
     "year": 2025,
     "abstract": "",
@@ -105,15 +80,7 @@
   {
     "title": "SycEval: Evaluating LLM Sycophancy",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:5nxA0vEk-isC",
-    "authors": [
-      "A Fanous",
-      "J Goldberg",
-      "AA Agarwal",
-      "J Lin",
-      "A Zhou",
-      "R Daneshjou",
-      "S Koyejo"
-    ],
+    "authors": ["A Fanous", "J Goldberg", "AA Agarwal", "J Lin", "A Zhou", "R Daneshjou", "S Koyejo"],
     "venue": "arXiv preprint arXiv:2502.08177",
     "year": 2025,
     "abstract": "",
@@ -122,13 +89,7 @@
   {
     "title": "A do it yourself (DIY) point-of-care wrist ultrasound phantom for joint access training",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:hqOjcs7Dif8C",
-    "authors": [
-      "CM Andrea Cheng",
-      "Justin Zhou",
-      "Chun Hei Ryan Chan",
-      "Connie Chen",
-      "Charlotte ..."
-    ],
+    "authors": ["CM Andrea Cheng", "Justin Zhou", "Chun Hei Ryan Chan", "Connie Chen", "Charlotte Cheng"],
     "venue": "The Ultrasound Journal 16 (32)",
     "year": 2024,
     "abstract": "",
@@ -137,17 +98,7 @@
   {
     "title": "Design and Evaluation of a Spoke-Based Double-Lumen Pediatric Gastrostomy Tube",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:Se3iqnhoufwC",
-    "authors": [
-      "M Aedla",
-      "CJ Cheng",
-      "AY Zhou",
-      "S Zhang",
-      "J Hsu",
-      "K Hu",
-      "JC Qian",
-      "KV Sompel",
-      "..."
-    ],
+    "authors": ["M Aedla", "CJ Cheng", "AY Zhou", "S Zhang", "J Hsu", "K Hu", "JC Qian", "KV Sompel"],
     "venue": "Children 11 (2), 263",
     "year": 2024,
     "abstract": "",
@@ -156,15 +107,7 @@
   {
     "title": "Nanofiber nerve caps to inhibit neuroma formation",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:0EnyYjriUFMC",
-    "authors": [
-      "HQ Mao",
-      "S TUFFAHA",
-      "A Hoke",
-      "A Y. ZHOU",
-      "BP ENZMANN",
-      "M James LAN",
-      "..."
-    ],
+    "authors": ["HQ Mao", "S Tuffaha", "A Hoke", "AY Zhou", "BP Enzmann", "M James Lan"],
     "venue": "WO Patent 178191A2, 2024",
     "year": 2024,
     "abstract": "",
@@ -173,16 +116,7 @@
   {
     "title": "Retractable low-profile pediatric gastrostomy tube and uses thereof",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:LkGwnXOMwfcC",
-    "authors": [
-      "M AEDLA",
-      "K Sharma",
-      "S ZHANG",
-      "J Qian",
-      "C CHENG",
-      "J HSU",
-      "A ZHOU",
-      "..."
-    ],
+    "authors": ["M Aedla", "K Sharma", "S Zhang", "J Qian", "C Cheng", "J Hsu", "A Zhou"],
     "venue": "WO Patent 0238164A1, 2024",
     "year": 2024,
     "abstract": "",
@@ -191,13 +125,7 @@
   {
     "title": "SAEM24 A novel ultrasound-guided wrist arthrocentesis task trainer for procedural teaching and assessment",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:UebtZRa9Y70C",
-    "authors": [
-      "TF Won-Jun Kuk",
-      "Justin Zhou",
-      "Chun Hei Chan",
-      "Kaitlyn Storm",
-      "Charlotte Cheng ..."
-    ],
+    "authors": ["TF Won-Jun Kuk", "Justin Zhou", "Chun Hei Chan", "Kaitlyn Storm", "Charlotte Cheng"],
     "venue": "ACADEMIC EMERGENCY MEDICINE",
     "year": 2024,
     "abstract": "",
@@ -206,16 +134,7 @@
   {
     "title": "Biodegradable nanofiber conical conduits for nerve repair",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:roLk4NBRz8UC",
-    "authors": [
-      "HQ Mao",
-      "S Tuffaha",
-      "A Hoke",
-      "MJ Lan",
-      "BP Enzmann",
-      "AY Zhou",
-      "AL Wong",
-      "..."
-    ],
+    "authors": ["HQ Mao", "S Tuffaha", "A Hoke", "MJ Lan", "BP Enzmann", "AY Zhou", "AL Wong"],
     "venue": "US Patent 0389926A1, 2023",
     "year": 2023,
     "abstract": "",
@@ -224,18 +143,7 @@
   {
     "title": "A Study of Postoperative Complications Occurring at Home with Pediatric Gastrostomy Feeding Tubes",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:YsMSGLbcyi4C",
-    "authors": [
-      "M Aedla",
-      "A Zhou",
-      "K Sompel",
-      "K Hu",
-      "C Cheng",
-      "J Hsu",
-      "J Qian",
-      "S Zhang",
-      "A Ho",
-      "..."
-    ],
+    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "C Cheng", "J Hsu", "J Qian", "S Zhang", "A Ho"],
     "venue": "Journal of Pediatric Gastroenterology and Nutrition 75, 10.1097",
     "year": 2022,
     "abstract": "",
@@ -244,16 +152,7 @@
   {
     "title": "METABOLITES IMPORTANT IN THE DIFFERENTIATION OF HUMAN PLURIPOTENT STEM CELLS TO LUNG PROGENITOR CELLS",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:Tyk-4Ss8FVUC",
-    "authors": [
-      "SL Leibel",
-      "I Tseu",
-      "A Zhou",
-      "A Hodges",
-      "J Yin",
-      "C Bilodeau",
-      "O Goltsis",
-      "M Post"
-    ],
+    "authors": ["SL Leibel", "I Tseu", "A Zhou", "A Hodges", "J Yin", "C Bilodeau", "O Goltsis", "M Post"],
     "venue": "JOURNAL OF INVESTIGATIVE MEDICINE 70 (1), 173-173",
     "year": 2022,
     "abstract": "",
@@ -262,16 +161,7 @@
   {
     "title": "Metabolomic profiling of human pluripotent stem cell differentiation into lung progenitors",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:zYLM7Y9cAGgC",
-    "authors": [
-      "SL Leibel",
-      "I Tseu",
-      "A Zhou",
-      "A Hodges",
-      "J Yin",
-      "C Bilodeau",
-      "O Goltsis",
-      "M Post"
-    ],
+    "authors": ["SL Leibel", "I Tseu", "A Zhou", "A Hodges", "J Yin", "C Bilodeau", "O Goltsis", "M Post"],
     "venue": "Iscience 25 (2)",
     "year": 2022,
     "abstract": "",
@@ -280,15 +170,7 @@
   {
     "title": "P18. A NOVEL BIOENGINEERED CONDUIT REDUCES NEUROMA FORMATION AFTER TARGETED MUSCLE REINNERVATION",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:W7OEmFMy1HYC",
-    "authors": [
-      "E Lee",
-      "B Enzmann",
-      "T Harris",
-      "A Wong",
-      "S Pinni",
-      "N von Guionneau",
-      "..."
-    ],
+    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "N von Guionneau"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 10 (4S), 57-58",
     "year": 2022,
     "abstract": "",
@@ -297,15 +179,7 @@
   {
     "title": "QS51. Guiding the Way: The Use of a Bioengineered Conduit Reduces Neuroma Formation and Associated Pain Behaviors",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:eQOLeE2rZwMC",
-    "authors": [
-      "E Lee",
-      "B Enzmann",
-      "T Harris",
-      "A Wong",
-      "S Pinni",
-      "N von Guionneau",
-      "..."
-    ],
+    "authors": ["E Lee", "B Enzmann", "T Harris", "A Wong", "S Pinni", "N von Guionneau"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 10 (6S), 121",
     "year": 2022,
     "abstract": "",
@@ -314,15 +188,7 @@
   {
     "title": "Improving nerve coaptation outcomes in targeted muscle reinnervation: a novel bioengineered device",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:qjMakFHDy7sC",
-    "authors": [
-      "E Lee",
-      "AL Wong",
-      "S Pinni",
-      "N Von Guionneau",
-      "TGW Harris",
-      "R Kothari",
-      "..."
-    ],
+    "authors": ["E Lee", "AL Wong", "S Pinni", "N Von Guionneau", "TGW Harris", "R Kothari"],
     "venue": "Plastic and Reconstructive Surgery–Global Open 9 (10S), 99-100",
     "year": 2021,
     "abstract": "",
@@ -331,17 +197,7 @@
   {
     "title": "S1288 Varying and Prevalent Complications Associated With Pediatric Gastrostomy Tubes",
     "url": "https://scholar.google.com/citations?view_op=view_citation&hl=en&user=ETbbsnoAAAAJ&sortby=pubdate&citation_for_view=ETbbsnoAAAAJ:2osOgNQ5qMEC",
-    "authors": [
-      "M Aedla",
-      "A Zhou",
-      "K Sompel",
-      "K Hu",
-      "S Zhang",
-      "J Qian",
-      "C Cheng",
-      "J Hsu",
-      "..."
-    ],
+    "authors": ["M Aedla", "A Zhou", "K Sompel", "K Hu", "S Zhang", "J Qian", "C Cheng", "J Hsu"],
     "venue": "Official journal of the American College of Gastroenterology | ACG 116, S592",
     "year": 2021,
     "abstract": "",
@@ -350,11 +206,9 @@
 ]
   </script>
 
-  <!-- ======= Renderer / Logic ======= -->
   <script>
     const RAW = JSON.parse(document.getElementById('pubdata').textContent || '[]');
 
-    // --- Type inference for missing/undefined types ---
     const TYPE_MAP = {
       journal: /journal|transactions|rev(iew)?|j\.\s|nature|cell|science|lancet|jama|nejm/i,
       conference: /proceedings|proc\.|conference|conf\.|icml|neurips|nips|cvpr|eccv|acl|emnlp|kdd|aaai|iclr|chi|sig/i,
@@ -363,19 +217,17 @@
       patent: /patent|us\s?\d{4,}|wo\s?\d{4,}|ep\s?\d{4,}/i,
       abstract: /abstract|meeting\s+abstract|poster/i
     };
+
     function inferType(p){
       const hay = [p.venue, p.title].filter(Boolean).join(" · ");
       for (const [type, regex] of Object.entries(TYPE_MAP)){
         if (regex.test(hay)) return type;
       }
-      // Heuristics: conference if "Proceedings"/"International Conference" detected,
-      // else default to 'journal' if venue looks like a journal-ish string with volume/issue cues
       if (/proceedings|international\s+conference|symposium/i.test(hay)) return 'conference';
       if (/\bvol\.|\bno\.|\bissue|\bvolume|\bpress\b/i.test(hay)) return 'journal';
-      return 'preprint'; // safest neutral default
+      return 'preprint';
     }
 
-    // Normalize items and apply inference
     const data = RAW.map(p => {
       const item = {
         title: p.title || '',
@@ -395,7 +247,6 @@
       return item;
     });
 
-    // --- Filters (Type + Tags + Search) ---
     const allTypes = Array.from(new Set(data.map(d => d.type))).sort();
     const allTags  = Array.from(new Set(data.flatMap(d => d.tags || []))).sort((a,b)=>a.localeCompare(b));
 
@@ -404,8 +255,8 @@
     const qInput    = document.getElementById('q');
     const clearBtn  = document.getElementById('clear');
 
-    let activeTypes = new Set(); // empty = all
-    let activeTags  = new Set(); // empty = all
+    let activeTypes = new Set();
+    let activeTags  = new Set();
     let query = '';
 
     function chip(label, group){
@@ -453,16 +304,13 @@
 
     function cap(s){ return s ? s.charAt(0).toUpperCase() + s.slice(1) : s; }
 
-    // Group by year
     function groupByYear(items){
       return items.reduce((acc, it) => { (acc[it.year||'Undated'] ||= []).push(it); return acc; }, {});
     }
 
-    // Mount
     const mount = document.getElementById('pubs');
 
     function render(){
-      // Filters
       let items = data.slice();
       if (activeTypes.size){
         items = items.filter(d => activeTypes.has(cap(d.type)));
@@ -482,10 +330,8 @@
         });
       }
 
-      // Sort: year desc then title
       items.sort((a,b)=> (b.year||0)-(a.year||0) || a.title.localeCompare(b.title));
 
-      // Group by year and render
       const groups = groupByYear(items);
       const years = Object.keys(groups).sort((a,b)=>{
         const A = a === 'Undated' ? -Infinity : +a;
@@ -549,4 +395,3 @@
   </script>
 </body>
 </html>
-
